--- a/style.scss
+++ b/style.scss
@@ -2,7 +2,7 @@
 Theme Name: One Read 2013
 Theme URI: http://wordpress.org/
 Description:
-Author: the WordPress team
+Author: DBRL
 Version: 1.2
 License: GNU General Public License
 License URI: license.txt
