Added more colors

--- a/_colors.scss
+++ b/_colors.scss
@@ -10,3 +10,17 @@ $mainNavBackground : #E5B366;
 $mainNavBackgroundHover : #793C2F;
 $mainNavBackgroundChild : #D69328;
 $navLinkBorderColor : #FFF;
+
+//main background gradient
+$mainBGColorStart: #111111;
+$mainBGColorEnd: #6d1919;
+
+$hrColor : #e7e7e7;
+
+$contentColor : #333;
+
+$aColor : #0066cc;
+
+$aVisitedColor : #743399;
+
+$aHoverColor : #A11E19; 
