--- a/_fonts.scss
+++ b/_fonts.scss
@@ -32,7 +32,7 @@ h3#reply-title,
 .reply,
 .widget-title,
 .wp-caption-text {
-	font-family: ;
+	font-family: $mainFontStack ;
 }
 input[type=submit] {
 	font-family: $mainFontStack;
