--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,10 @@
 /*
 Theme Name: One Read 2013
-Theme URI: http://wordpress.org/
-Description:
+Theme URI: http://www.dbrl.org/
+Description: 
 Author: DBRL
 Version: 1.2
-License: GNU General Public License
+License: GNU GPL
 License URI: license.txt
 Tags:
 */
