--- a/_globals.scss
+++ b/_globals.scss
@@ -1,16 +1,18 @@
+$backgroundImage: "/wp-content/themes/twentyten.oneread_2013/images/oneread-bg1.png";
+
 body {
 	/*	background: #FFDE74;    */
-	background: url("/wp-content/themes/twentyten.oneread_2013/images/oneread-bg1.png") repeat-x  left top #FFF;
+	background: url($backgroundImage) repeat-x  left top #FFF;
 	background-attachment: fixed;
 
 /*	background: #111;
-background: -moz-linear-gradient(top, #111111 0%, #6d1919 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#111111), color-stop(100%,#6d1919));
-background: -webkit-linear-gradient(top, #111111 0%,#6d1919 100%);
-background: -o-linear-gradient(top, #111111 0%,#6d1919 100%);
-background: -ms-linear-gradient(top, #111111 0%,#6d1919 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#111111', endColorstr='#6d1919',GradientType=0 );
-background: linear-gradient(top, #111111 0%,#6d1919 100%);*/
+background: -moz-linear-gradient(top, $mainBGColorStart 0%, $mainBGColorEnd 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$mainBGColorStart), color-stop(100%,#6d1919));
+background: -webkit-linear-gradient(top, $mainBGColorStart 0%,$mainBGColorEnd 100%);
+background: -o-linear-gradient(top, $mainBGColorStart 0%,$mainBGColorEnd 100%);
+background: -ms-linear-gradient(top, $mainBGColorStart 0%,$mainBGColorEnd 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$mainBGColorStart', endColorstr='$mainBGColorEnd',GradientType=0 );
+background: linear-gradient(top, $mainBGColorStart 0%,$mainBGColorEnd 100%);*/
 }
 body,
 input,
@@ -20,7 +22,7 @@ textarea {
 	line-height: 18px;
 }
 hr {
-	background-color: #e7e7e7;
+	background-color: $hrColor;
 	border: 0;
 	clear: both;
 	height: 1px;
