Added more colors

--- a/_colors.scss
+++ b/_colors.scss
@@ -24,3 +24,13 @@ $aColor : #0066cc;
 $aVisitedColor : #743399;
 
 $aHoverColor : #A11E19; 
+
+//Navigation
+$navigationColor : #888;
+$navigationHover : #ff4b33;
+
+//Page titles
+$pageTitleLink: #888;
+$pageTitleLinkHover: #ff4b33;
+
+$contentH2: #B7292A;
