--- a/_navigation.scss
+++ b/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-	color: #888;
+	color: $navigationColor;
 	font-size: 12px;
 	line-height: 18px;
 	overflow: hidden;
@@ -12,7 +12,7 @@
 }
 .navigation a:active,
 .navigation a:hover {
-	color: #ff4b33;
+	color: $navigationHover;
 }
 .nav-previous {
 	float: left;
